# lit_agent

./: .env.example  .gitignore  CLAUDE.md  CLI_OUT_validation.txt  EMPIRICAL_ANALYSIS.md  IMPLEMENTATION_PLAN.md  README.md  README.strict.bak.md  citation_analysis_results.json  pyproject.toml  test_formatting.py  test_problematic_urls.py  test_real_citations.py
.github/workflows/: test.yml  test.yml.strict.bak
config/: url_patterns.yaml
docs/: conf.py  development.strict.bak.md  index.md
plans/: statistical_validation_progress.md
resources/test_input/: Astrocytes_patch_seq_ds_perplexity.md  OPENAI_ds_Astrocytes_wmb.md  Perplexity_ds_astrocytes_WMB.md  Perplexity_ds_astrocytes_markers.md  Perplexity_ds_astrocytes_transcriptomics_data.md
src/lit_agent/: agent_connection.py
src/lit_agent/identifiers/: __init__.py  api.py  base.py  demo.py  extractors.py  reporting.py  topic_validator.py  url_extractor.py  validation_demo.py  validators.py  visualizations.py  web_scrapers.py
tests/integration/: test_agent_integration.py  test_citation_resolution_integration.py  test_identifier_integration.py
tests/unit/: test_agent_connection.py  test_citation_resolution.py  test_identifiers.py  test_metadata_fetching.py  test_rendering.py  test_reporting.py  test_topic_integration.py  test_topic_validator.py  test_web_scrapers.py
