[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=lit_agent --cov-report=term-missing"
markers = [
  "unit: fast, isolated tests",
  "integration: tests that hit real services or I/O"
]

[tool.coverage.run]
branch = true
source = ["src/lit_agent"]

[tool.coverage.report]
skip_empty = true

